--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "sass": "^1.66.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
